v2.1.1 Fixed (hopefully) video bug on mobile

--- a/src/sass/components/_wordpress-forms.scss
+++ b/src/sass/components/_wordpress-forms.scss
@@ -8,6 +8,7 @@
  * Styling for for WP subscribe to comment checkbox label
  */
 #subscribe-label {
+	@extend .label-checklist;
 	display: inline;
 }
 
